--- a/callplanning.html
+++ b/callplanning.html
@@ -1,5 +1,12 @@
 
 <html>
+<head>
+	<style>
+		html, body {margin:0;padding:0;}
+		
+		#chatHelp {background-color:white;margin:5px;padding:10px;}
+	</style>
+</head>
 <body link="#000000">
 <table width="100%" cellpadding="0" cellspacing="25" border="0" bgcolor="#666666">
 <tr>
@@ -18,8 +25,9 @@
 	</td>
 	<td width="25%"  valign="top">
 	<iframe name="chat" src="http://webchat.freenode.net/?channels=IO-CallPlanning"  frameborder="1" scrolling="yes" width="100%" height="500"></iframe>
+	<div id="chatHelp">
 	<font size="1">
-	<br> HOW TO REGISTER A NICKNAME FOR THE FIRST TIME:
+	HOW TO REGISTER A NICKNAME FOR THE FIRST TIME:
 	<br>1. Enter this text into the entry field in the chat window to select a nickname:
 	<br>/nick YourNickname
 	<br>2. Next, enter this text with your selected password and email address:
@@ -31,6 +39,7 @@
 	<br> /msg nickserv identify YourNickname YourPassword
 	</font>
 	</td>
+	</div>
 	<td width="20"><img src="pixel.gif" alt="pixel" width="20" height="1" /></td>
 </tr>
 </table>
